--- a/src/csc301/ultrasound/android/bin/AndroidManifest.xml
+++ b/src/csc301/ultrasound/android/bin/AndroidManifest.xml
@@ -4,7 +4,10 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="10" />
+     <uses-sdk
+        android:minSdkVersion="10"
+        android:targetSdkVersion="18" />
+     
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>    
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -16,15 +19,25 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+        <activity android:name=".AuthenticationActivity" />
         <activity
-            android:name=".LoginScreen"
-            android:label="@string/app_name"
-            android:clearTaskOnLaunch="true" >
-            <intent-filter>
+            android:name=".MainActivity"
+            android:label="@string/app_name" >
+           
+             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        
+        
+        <activity
+            android:name=".LoginScreen"
+            android:clearTaskOnLaunch="true" >
+            
+            
+            
         </activity>
         
         <activity
