--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,7 @@
 
-
  <ifmodule mod_rewrite.c="">
 RewriteEngine On
-RewriteBase /
+RewriteBase /ultrasound-in-remote-maternal-healthcare/
 #Removes access to the system folder by users.
 #Additionally this will allow you to create a System.php controller,
 #previously this would not have been possible.
