--- a/.htaccess
+++ b/.htaccess
@@ -4,5 +4,5 @@
 #RewriteRule .* index.php/$0 [PT,L]  
 
 RewriteEngine on
-RewriteCond $1 !^(index\.php|images|captcha|css|js|robots\.txt)
+RewriteCond $1 !^(index\.php|images|captcha|robots\.txt)
 RewriteRule ^(.*)$ /index.php/$1 [L]
