--- a/src/csc301/ultrasound/android/AndroidManifest.xml
+++ b/src/csc301/ultrasound/android/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>    
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" /> 
     <uses-feature android:name="android.hardware.camera" />
@@ -52,7 +53,13 @@
             android:name=".MetadataScreen"
         />
         <activity
+            android:name=".ImageDisplay"
+        />
+        <activity
             android:name=".WelcomeScreen"
+        />
+        <activity
+            android:name=".Search"
         />
         <activity
             android:name=".patientRecords"
